2003-07-06  Wakaba  <w@suika.fam.cx>

	* ChangeLog, install.js.in, install-res.en.inf.in, replace.pl: New files.