@@ -1,3 +1,7 @@
+2003-10-25  Wakaba  <wakaba@suika.fam.cx>
+
+	* replace.pl (parsing SuikaWikiConfig/1.1): Ignore \s+ before end of line.
+
 2003-07-06  Wakaba  <w@suika.fam.cx>
 
 	* ChangeLog, install.js.in, install-res.en.inf.in, replace.pl: New files.
